# DNS-Adblocker-ESP32-

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: deploy-flasher.yml
components/dns/: CMakeLists.txt  Kconfig  blocklist.c  dns_cache.c  dns_forwarder.c  dns_log.c  dns_parser.c  dns_server.c  dns_stats.c  schedule.c
components/dns/include/: blocklist.h  dns_cache.h  dns_forwarder.h  dns_log.h  dns_parser.h  dns_server.h  dns_stats.h  schedule.h
components/ota/: CMakeLists.txt  ota_check.c
components/ota/include/: ota_check.h
components/storage/: CMakeLists.txt  idf_component.yml  storage.c
components/storage/include/: storage.h
components/web/: CMakeLists.txt  Kconfig  dashboard.html  web_server.c
components/web/include/: web_server.h
components/wifi/: CMakeLists.txt  Kconfig  captive_portal.c  idf_component.yml  wifi_manager.c
components/wifi/include/: captive_portal.h  wifi_manager.h
main/: CMakeLists.txt  pocketdns_main.c
web-flasher/: index.html  manifest.json
